--- a/app/views/propcott/view.html
+++ b/app/views/propcott/view.html
@@ -97,13 +97,6 @@
 		-webkit-filter: blur(5px);
 		filter: blur(5px);
 	}
-	.join-button {
-		display: block;
-		color: white;
-		background: red;
-		border: 0px;
-		border-radius: 10px;
-	}
 	.ribbon {
 		background: #BD1417;
 		position: relative;
@@ -133,10 +126,6 @@
 		border-right-width: 16px;
 		border-right-color: #eee;
 	}
-	.metric {
-		font-weight: bold;
-		font-size: 0.9em;
-	}
 	.metric p {
 		margin: 0.4em 0em 0em 0em;
 	}
@@ -144,10 +133,11 @@
 		position: relative;
 		display: block;
 		height: 4px;
+		border-radius: 2px;
 	}
 	.metric-fill {
-		background-color: #A55D5D;
-		height: 8px;
+		background-color: #ce2626;
+		height: 12px;
 		margin-top: 2px;
 		border-bottom: 1px solid #8c4d4d;
 	}
@@ -165,8 +155,13 @@
 		padding: 0 1em;
 		margin: 1em 0;
 	}
+
+
+	/*this is the main view, when you click on a propcott this page loads*/
 	input:focus, select:focus, textarea:focus, button:focus{outline: none;}
+	/*specific to this page*/
 	.viewPropFormBox h3{margin-bottom: 5px; font-weight: bold;font-size: 35px !important;}
+	.viewPropcottBox{min-height: 400px;padding-bottom: 30px;}
 	/*banner*/
 	#propcott-title{margin: 0 0 1em 0;font-size: 40px;}
 	.banner-propcott-num{vertical-align: top;}
@@ -176,20 +171,22 @@
 	.banner-propcott-target p{margin: 0; padding-left: 1em; line-height: 1.1;border-left: 1px solid white;min-height: 3.8em;}
 	.banner-propcott-target span{padding-left: 2px;}
 	.banner-propcott-target strong{font-size: 2.7em;}
-	.join-button{margin: 7px auto 0px auto;width: 110px;color:#ddd;background: rgba(0, 255, 0, 0);font-family: 'Capriola';font-size: 28px;}
+	.join-button {display: block;color: #ddd;width: 185px;margin: 20px auto 0px auto;font-size: 30px;background: rgba(163, 78, 78,0.1);padding-top: 4px;border-radius: 3px; border: 2px solid #8c4d4d;}
 	.join-button span{font-size: inherit;color: #A87070;}
 	.join-button:hover{text-decoration: none;color: #A87070;}
 	/*the white box*/
-	.viewPropcottBox{min-height: 400px;padding-bottom: 30px;}
 	.col-md-7{padding: 0em 0em 0em 2.5em;}
-	.col-md-5{padding: .4em 1.5em 0em 3em;float: right; clear: right}
+	.col-md-5{padding: .4em 2.5em 0em 2em;float: right; clear: right;}
 	.col-md-7 *{font-size: 17px;}
 	.col-md-7 a{display:block;overflow: hidden;text-overflow: ellipsis;}
 	#propcott-media{margin: 0 1em;}
+	.image-container{text-align: center; background: #222;box-shadow: 0px 0px 1px 1px rgba(0,0,0,0.1);}
+	.image-container img{max-width: 100%; max-height: 250px; vertical-align: top;}
+	.propcottImage{padding-top: 1em;margin-top: 8px}
 	.goalCol h3{margin-top: .5em}
-	.whatCol{padding-top: 0;}
-	#propcott-how li{color: #000;} #propcott-how p{color:#A87070;} #propcott-how{padding: 0px 18px;}
-	#propcott-alt li{color: #000;} #propcott-alt p{color:#A87070;} #propcott-alt{padding: 0px 18px;}
+	.whatCol, .insteadCol{padding-top: 0;padding-left: 2.5em;}
+	#propcott-how li{color: #000;} #propcott-how p{color:#A87070;} #propcott-how{padding: 0px 28px;}
+	#propcott-alt li{color: #000;} #propcott-alt p{color:#A87070;} #propcott-alt{padding: 0px 28px;}
 	p{margin-top: 10px;}
 	/*shares and updates*/
 	.share h3{border-top: 1px solid #eee;padding-top: 0.8em;padding-bottom: 0.5em;text-align:center;}
@@ -198,7 +195,7 @@
 	.sharebuttons {margin-top: 0px;}
 	.sharebuttons a {margin: 3px 1px;}
 	/*metric-bar join*/
-	.metric-join {margin:2px 1px;float:left; padding-left: 4px}
+	.metric {font-weight: bold;font-size: 0.9em;margin-top: 0px;padding: 8px;border-left: 0px solid #555; border-right: 0px solid #777;box-shadow: 0px 2px 1px 1px rgba(0,0,0,0.1);}
 	.metric-join a{color: #444;}
 	.metric-join span{font-size: 1em;color: #A55D5D;}
 	.metric-join a:hover{color: #A55D5D;text-decoration: none}
@@ -210,6 +207,11 @@
 		.col-md-7{padding: 0 2em;}
 		.propcottImage{padding: 0em 1em 0em 3em;margin: 1em;}
 	}
+	/*forces a larger container*/
+	.container-fluid.universal, .container-fluid.footerContainer
+	{
+   		max-width: 1100px !important;  
+   	}
 	</style>
 {% endblock %}
 
@@ -281,10 +283,13 @@
 				</div>
 			</div>
 			{% if !supporting %}
-			<a href="{% if user %}/p/{{ propcott.slug }}/join{% else %}#join{% endif %}" class="join-button"><span class="typcn typcn-plus"></span> Join!</a>
+			
+			
+			<a href="{% if user %}/p/{{ propcott.slug }}/join{% else %}#join{% endif %}" class="join-button">
+			<span class="typcn typcn-plus"></span> Join!</a>
 			{% endif %}
 			{% if propcott.creator && propcott.creator.username %}
-				<p style="margin: 0; margin-top: 1em;">By {{ propcott.creator.username }}
+				<p style="margin: 0; margin-top: 0.8em;">By {{ propcott.creator.username }}
 				{% if propcott.creator.org %} from
 					{% if propcott.creator.org_link %}
 						<a style="color: white;" href="{{ propcott.creator.org_link }}">{{ propcott.creator.org }}</a>
@@ -321,20 +326,25 @@
 	<div class="col-12 col-md-5 propcottImage">
 		{% if propcott.media_type %}
 			{% if propcott.media_type == 'image' %}
-			<div style="text-align: center; background: #111;"><img src="http://static.propcott.com/{{ propcott.media_link }}" style="max-width: 100%; max-height: 250px; vertical-align: top;"></div>
+			<div class="image-container"><img src="http://static.propcott.com/{{ propcott.media_link }}"></div>
 			{% elseif propcott.media_type == 'video' %}
 			<div class="fluid-video"><div class="inner"><iframe src="https://www.youtube.com/embed/{{ propcott.media_link }}" frameborder="0" allowfullscreen></iframe></div></div>
 			{% endif %}
 		{% endif %}
 		<div class="metric clear">
-			<div class="metric-bar"><div class="metric-fill" style="width: {{ propcott.support.all / propcott.metric * 100 }}%;"></div></div>
-			<p style="float: left;">{{ propcott.support.all }} propcotters</p>
-			<p class = "metric-join">
-				{% if !supporting %}
-				<a href="{% if user %}/p/{{ propcott.slug }}/join{% else %}#join{% endif %}"><span class="typcn typcn-plus"></span> Join!</a>
-				{% endif %}
-			</p>
-			<p style="float: right;">{{ propcott.metric - propcott.support.all }} more for {{ propcott.metric }}</p>
+			<div class="metric-bar">
+				<div class="metric-fill" style="width: {{ propcott.support.all / propcott.metric * 100 }}%;">
+				</div>
+			</div>
+			<div style = "margin-top: 10px; font-size: 20px">
+				<span style="">{{ propcott.support.all }} propcotters</span>
+				<span class = "metric-join">
+					{% if !supporting %}
+					<a href="{% if user %}/p/{{ propcott.slug }}/join{% else %}#join{% endif %}"><span class="typcn typcn-plus"></span> Join!</a>
+					{% endif %}
+				</span>
+			</div>
+			<p style="float: left;margin:0px; color: #555">{{ propcott.metric - propcott.support.all }} more for {{ propcott.metric }}</p>
 
 		</div>
 		
@@ -361,7 +371,7 @@
 	{% endif %}
 
 	{% if propcott.alt %}
-	<div class="col-12 col-md-5">
+	<div class="col-12 col-md-5 insteadCol">
 		<h3>Instead, try...</h3>
 		<ul id="propcott-alt">
 			{% for alt in propcott.alt %}<li><p>{{ alt }}</p></li>{% endfor %}
